Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--nord0);
+  width: 600px;
 }
 
 #sketch {
